[project]
name = "toy-pipelined-inference"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.2"
dependencies = [
    "lovely-tensors>=0.1.18",
    "loguru>=0.7.3",
    "torch>=2.6.0",
]

[dependency-groups]
viz = [
    "matplotlib>=3.10.1",
    "pandas>=2.2.3",
]
